@@ -1,3 +1,8 @@
+2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* backends/evoldap-backend.c: (subst_variables): Fix a couple
+	compiler warnings.
+
 2007-01-25  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gconf/gconf-client.c: (gconf_client_get_float),
